# anomaly-detection-autoencoder

./: .gitignore  README.md  pyproject.toml
src/fraud/: config.py  data.py  eda.py  fraud_autoencoder.py  main.py  metrics.py  splits.py
src/fraud/models/: base.py  gaussian.py  isolation_forest.py  one_class_svm.py
