[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adm-fraude"
version = "1.0.0"
description = "Project for ADM course: Anomaly detection with autoencoders on credit card fraud"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "matplotlib>=3.8",
  "kagglehub>=1.0.1",
]

[project.optional-dependencies]
dev = ["jupyter", "ipykernel", "ruff", "pytest"]
data = ["kaggle"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, UP pyupgrade, B bugbear
select = ["E", "F", "I", "W", "UP", "B"]
